refactors for easier maintenance, fixes several layout bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	text-align: center;
 }
 
 a {
@@ -15,64 +16,70 @@ ul {
 }
 
 .main-header {
-	width: 100%;
-	height: 60px;
-	background-color: #2f2f2f;
 	position: fixed;
 	z-index: 5;
+	background-color: #2f2f2f;
+	width: 100%;
+	height: 60px;
 }
 
 .main-logo,
-.navmenu-icon 
-.frame {
+.navmenu-icon, 
+.dropdowm,
+.navmenu,
+.frame, 
+.register-bar,
+.register-bar-text,
+.email-input-bar,
+.email-border,
+.btn-register {
 	display: inline-block;
 }
 
 .main-logo {
-	width: 120px;
-	left: 9px;
-	top: 9px;
 	position: relative;
 	float: left;
 	margin: 0;
 	padding: 0;
+	width: 120px;
+	left: 9px;
+	top: 9px;
 }
 
 .dropdown {
-	display: inline-block;
-	top: 12px;
-	right: 10px;
-	margin: 0;
+	position: absolute;
 	float: right;
-	position: relative;
+	margin: 0;
+	top: 13px;
+	right: 10px;
 }
 
 .navmenu {
-	display: inline-block;
-	right: 60px;
-	top: 0;
 	position: absolute;
 	float: right;
-	visibility: hidden;	
 	opacity: 0;
+	visibility: hidden;
+	right: 60px;
+	top: 0;	
 }
 
 .navmenu a {
+	position: relative;
 	display: block;
+	margin: 0;
+	padding: 0.2em 3em 0.2em 0.5em;
 	font-size: 0.5em;
+	text-align: left;
+	background-color: white;
 	border-bottom: 1px solid #2f2f2f;
 	border-right: 1px solid #2f2f2f;
 	border-left: 1px solid #2f2f2f;
-	background-color: white;
-	margin: 0;
-	padding: 0.2em 3em 0.2em 0.5em;
-	position: relative;
 }
 
 .navmenu-icon {
+	position: absolute;
 	height: 32px;
 	padding-left: 35px;
-	position: absolute;
 	right: 20px;
 }
 
@@ -96,11 +103,11 @@ ul {
 }
 
 .frame {
-	top: 65px;
-	margin-left: auto;
-	margin-right: auto;
 	position: relative;
 	z-index: 1;
+	top: 70px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .content-container {
@@ -121,85 +128,76 @@ ul {
 #tagline {
 	font-size: 2em;
 }
-
-.register-bar,
-.register-bar-text,
-.email-input-bar,
-.email-border,
-.btn-register {
-	display: inline-block;
-}
  
 .register-bar { 
-  margin: 6% 0;
-  padding: 0.5em 0;
   position: relative;
-  width: 100%;
-  background-color: #00aeef;
   z-index: 1;
+  margin: 6% 0;
+  padding: -5px 0;
   color: white;
+  background-color: #00aeef;
+  width: 100%;
 }
 
 .email-input-bar {
-	border-radius: 65px;
-	border-style: none;
-	padding: 0.2em 0 0.2em 0.3em;
-	min-width: 200px;
-	font-size: 0.9em;
-	margin-right: -0.1em;
 	position: relative;
-	z-index: 2;
-	outline: none;
+	z-index: 4;
+	font-size: 0.9em;
+	color: #2f2f2f;
+	text-align: left;
+	margin-right: -0.1em;
+	padding: 0.2em 0 0.2em 0.3em;
 	top:0;
 	bottom:0;
+	border-radius: 65px;
+	border-style: none;
+	outline: none;
+	min-width: 200px;	
 }
 
 .email-border {
+	position: relative;
+	z-index: 4;
+	padding: 0.18em 0.25em 0.2em 0;
+	margin-right: -45px;
+	background-color: #00aeef;
 	border-right: 0.3em solid white;
 	border-top: 0.3em solid white;
 	border-bottom: 0.3em solid white;
 	border-bottom-right-radius: 80px;	
-	border-top-right-radius: 80px;
-	padding: 0.2em 0.25em 0.2em 0;
-	position: relative;
-	margin-right: -45px;
-	z-index: 4;
-	background-color: #00aeef;
+	border-top-right-radius: 80px;	
 }
 
 .btn-register {
+	position: relative; 
+	z-index: 1;
+	font-size: 0.9em;
+	color: white;
+	outline: none;
+	padding: 0.48em 0.6em 0.46em 50px;
 	border-right: 0.4em solid white;
 	border-top: 0.4em solid white;
 	border-bottom: 0.4em solid white;
-	padding: 0.5em 0.6em 0.46em 50px;
-	color: white;
 	border-bottom-right-radius: 80px;	
 	border-top-right-radius: 80px;
-	font-size: 1em;
-	z-index: 1;
-	position: relative; 
-	outline: none;
-	font-size: 0.9em;
 }
 
 .btn:hover {
 	background-color: #48a4df;
 	outline: none;
 }
-
-.btn:active {
-	color: #404041;
-}
-
 .btn > a {
 	display: block;
 	color: white;
 }
 
+.btn:active > a { 
+	color: #404041;
+}
+
 /*.bar {
 	clear:both;
 }*/
-
 
 @media only screen and (max-width: 1000px) {
 
@@ -207,11 +205,9 @@ ul {
 
    .register-bar { font-size: 1.1em; }
  
-   .btn-register { padding: 0.50em 0.6em 0.45em 50px; }
+   .btn-register { padding: 0.50em 0.6em 0.46em 50px; }
 
    .navmenu a { font-size: 0.6em; } 
-
-   #email-border { padding: 0.25em 0.25em 0.4em 0; }
 }
 
 @media only screen and (max-width: 600px) {
